Fixed social icons alignment

--- a/scss/_styling.scss
+++ b/scss/_styling.scss
@@ -78,6 +78,10 @@ footer {
     ul.menu {
         text-align: center;
 
+        li {
+            display: inline-block;
+        }
+        
         .icons {
             font-size: 2rem;
         }
